Added Label and Collaborator and modification in user model